fix(console): hide drag handle on mobile devices

--- a/console/src/pages/Settings/Models/index.module.less
+++ b/console/src/pages/Settings/Models/index.module.less
@@ -1558,6 +1558,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .dragHandle {
+    display: none !important;
+  }
+}
+
 .modelListItemInfo {
   display: flex;
   flex-direction: column;
